--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -33,7 +33,7 @@ a {
 
 @layer utilities {
   .wrapper {
-    @apply max-w-7xl lg:mx-auto p-5 md:px-10 w-full;
+    @apply max-w-7xl mx-auto p-5 md:px-10 w-full;
   }
 
   .flex-start {
